add selected locale detection in BE

--- a/frontend/translations/de.json
+++ b/frontend/translations/de.json
@@ -244,7 +244,9 @@
     "customWorkers": "Benutzerdefinierte Worker",
     "scheduledTriggers": "Geplante Trigger",
     "appTriggers": "App-Trigger",
-    "limitsExceeded": "Sie haben Ihre Limits erreicht. Upgraden Sie Ihren Plan, um mehr zu chatten."
+    "limitsExceeded": "Sie haben Ihre Limits erreicht. Upgraden Sie Ihren Plan, um mehr zu chatten.",
+    "agentInitiatedSuccessfully": "Agent erfolgreich gestartet",
+    "aiAssistantReady": "Ihr KI-Assistent ist bereit zu helfen"
   },
   "thread": {
     "integrations": "Integrationen",
@@ -297,6 +299,21 @@
     "credits": "Credits",
     "popular": "Beliebt",
     "creditsExplained": "Credits erklärt",
+    "trialActive": "Testversion aktiv",
+    "trialBadge": "7-Tage-Testversion",
+    "currentPlan": "Aktueller Plan",
+    "currentBadge": "Aktuell",
+    "scheduled": "Geplant",
+    "scheduledBadge": "Geplant",
+    "loading": "Wird geladen...",
+    "subscriptionChangeScheduled": "Abonnementänderung geplant",
+    "planWillChangeOn": "Ihr Plan ändert sich am {date}.",
+    "failedToInitiateSubscription": "Abonnement konnte nicht gestartet werden. Bitte versuchen Sie es erneut.",
+    "subscriptionUpgraded": "Abonnement von {currentPrice} auf {newPrice} aktualisiert",
+    "subscriptionUpdated": "Abonnement erfolgreich aktualisiert",
+    "cannotDowngradeDuringCommitment": "Während der Verpflichtungsperiode kann nicht herabgestuft werden",
+    "alreadyOnThisPlan": "Sie sind bereits auf diesem Plan.",
+    "localModeMessage": "Läuft im lokalen Entwicklungsmodus - Abrechnungsfunktionen sind deaktiviert",
     "creditsExplainedPage": {
       "title": "Credits erklärt",
       "subtitle": "Alles, was Sie über die Funktionsweise von Credits bei Kortix wissen müssen",
@@ -377,6 +394,11 @@
     "downgrade": "Herabstufen",
     "switchToLegacyYearly": "Zu Legacy-Jahresplan wechseln",
     "pickPlan": "Wählen Sie den Plan, der zu Ihnen passt.",
+    "reachedLimit": "Sie haben Ihre Limits erreicht.",
+    "projectLimit": "Projektlimit ({current}/{limit})",
+    "threadLimit": "Thread-Limit ({current}/{limit})",
+    "workerLimit": "Worker-Limit ({current}/{limit})",
+    "triggerLimit": "Trigger-Limit ({current}/{limit})",
     "getAdditionalCredits": "Zusätzliche Credits erhalten",
     "selectPlan": "Plan auswählen",
     "changeScheduled": "Geplant ändern",
