--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -225,7 +225,9 @@
     "customWorkers": "Custom Workers",
     "scheduledTriggers": "Scheduled Triggers",
     "appTriggers": "App Triggers",
-    "limitsExceeded": "You ran out of limits. Upgrade your plan to chat more."
+    "limitsExceeded": "You ran out of limits. Upgrade your plan to chat more.",
+    "agentInitiatedSuccessfully": "Agent initiated successfully",
+    "aiAssistantReady": "Your AI assistant is ready to help"
   },
   "thread": {
     "integrations": "Integrations",
@@ -286,6 +288,21 @@
     "credits": "Credits",
     "popular": "Popular",
     "creditsExplained": "Credits explained",
+    "trialActive": "Trial Active",
+    "trialBadge": "7-Day Trial",
+    "currentPlan": "Current Plan",
+    "currentBadge": "Current",
+    "scheduled": "Scheduled",
+    "scheduledBadge": "Scheduled",
+    "loading": "Loading...",
+    "subscriptionChangeScheduled": "Subscription change scheduled",
+    "planWillChangeOn": "Your plan will change on {date}.",
+    "failedToInitiateSubscription": "Failed to initiate subscription. Please try again.",
+    "subscriptionUpgraded": "Subscription upgraded from {currentPrice} to {newPrice}",
+    "subscriptionUpdated": "Subscription updated successfully",
+    "cannotDowngradeDuringCommitment": "Cannot downgrade during commitment period",
+    "alreadyOnThisPlan": "You are already on this plan.",
+    "localModeMessage": "Running in local development mode - billing features are disabled",
     "creditsExplainedPage": {
       "title": "Credits Explained",
       "subtitle": "Everything you need to know about how credits work on Kortix",
@@ -366,6 +383,11 @@
     "downgrade": "Downgrade",
     "switchToLegacyYearly": "Switch to Legacy Yearly",
     "pickPlan": "Pick the plan that works for you.",
+    "reachedLimit": "You've reached your limits.",
+    "projectLimit": "Project Limit ({current}/{limit})",
+    "threadLimit": "Thread Limit ({current}/{limit})",
+    "workerLimit": "Worker Limit ({current}/{limit})",
+    "triggerLimit": "Trigger Limit ({current}/{limit})",
     "getAdditionalCredits": "Get Additional Credits",
     "selectPlan": "Select Plan",
     "changeScheduled": "Change Scheduled",
