web; localisation, with geo detection

--- a/frontend/translations/es.json
+++ b/frontend/translations/es.json
@@ -1,24 +1,24 @@
 {
   "common": {
-    "cancel": "Cancel",
-    "save": "Save",
+    "cancel": "Cancelar",
+    "save": "Guardar",
     "saving": "Saving...",
     "success": "Success",
-    "done": "Done",
-    "close": "Close",
+    "done": "Listo",
+    "close": "Cerrar",
     "ok": "OK",
-    "yes": "Yes",
+    "yes": "Sí",
     "no": "No",
-    "delete": "Delete",
-    "edit": "Edit",
-    "search": "Search",
-    "loading": "Loading...",
+    "delete": "Eliminar",
+    "edit": "Editar",
+    "search": "Buscar",
+    "loading": "Cargando...",
     "error": "Error",
-    "retry": "Try again",
-    "send": "Send",
-    "back": "Back",
-    "new": "New",
-    "create": "Create",
+    "retry": "Reintentar",
+    "send": "Enviar",
+    "back": "Atrás",
+    "new": "Nuevo",
+    "create": "Crear",
     "update": "Update",
     "remove": "Remove",
     "confirm": "Confirm",
@@ -32,7 +32,7 @@
     "tryFree": "Start free"
   },
   "settings": {
-    "title": "Settings",
+    "title": "Ajustes",
     "tabs": {
       "general": "General",
       "plan": "Plan",
@@ -301,14 +301,14 @@
     "placeholder": "Type your message..."
   },
   "billing": {
-    "title": "Billing & Subscription",
+    "title": "Facturación & Suscripción",
     "subscription": "Subscription",
-    "credits": "Credits",
+    "credits": "Créditos",
     "popular": "Popular",
     "creditsExplained": "Credits explained",
     "trialActive": "Trial Active",
     "trialBadge": "7-Day Trial",
-    "currentPlan": "Current Plan",
+    "currentPlan": "Plan Actual",
     "currentBadge": "Current",
     "scheduled": "Scheduled",
     "scheduledBadge": "Scheduled",
@@ -386,19 +386,19 @@
     "threadUsage": "Thread Usage",
     "error": "Error",
     "totalUsage": "Total Usage",
-    "usage": "Usage",
+    "usage": "Uso",
     "thread": "Thread",
     "lastUsed": "Last Used",
     "creditsUsed": "Credits Used",
     "creditTransactions": "Credit Transactions",
     "loadingTransactionHistory": "Loading your transaction history...",
-    "monthly": "Monthly",
+    "monthly": "Mensual",
     "yearly": "Yearly",
     "discount": "15% off",
-    "perMonth": "/month",
-    "billedYearly": "billed yearly",
+    "perMonth": "/mes",
+    "billedYearly": "facturado anualmente",
     "downgradePending": "Downgrade Pending",
-    "downgrade": "Downgrade",
+    "downgrade": "Degradar",
     "switchToLegacyYearly": "Switch to Legacy Yearly",
     "pickPlan": "Pick the plan that works for you.",
     "reachedLimit": "You've reached your limits.",
@@ -407,7 +407,7 @@
     "workerLimit": "Worker Limit ({current}/{limit})",
     "triggerLimit": "Trigger Limit ({current}/{limit})",
     "getAdditionalCredits": "Get Additional Credits",
-    "selectPlan": "Select Plan",
+    "selectPlan": "Seleccionar Plan",
     "changeScheduled": "Change Scheduled",
     "notAvailable": "Not Available",
     "features": {
@@ -424,40 +424,40 @@
   },
   "auth": {
     "logIntoAccount": "Log into your account",
-    "createAccount": "Create account",
-    "continueWithGoogle": "Continue with Google",
+    "createAccount": "Crear cuenta",
+    "continueWithGoogle": "Continuar con Google",
     "continueWithGitHub": "Continue with GitHub",
-    "orEmail": "or email",
-    "emailAddress": "Email address",
-    "password": "Password",
-    "confirmPassword": "Confirm your password",
-    "signIn": "Sign in",
-    "signUp": "Sign up",
-    "signingIn": "Signing in...",
+    "orEmail": "o email",
+    "emailAddress": "Dirección de email",
+    "password": "Contraseña",
+    "confirmPassword": "Confirma tu contraseña",
+    "signIn": "Iniciar sesión",
+    "signUp": "Registrarse",
+    "signingIn": "Iniciando sesión...",
     "creatingAccount": "Creating account...",
-    "forgotPassword": "Forgot password?",
-    "dontHaveAccount": "Don't have an account?",
-    "alreadyHaveAccount": "Already have an account?",
+    "forgotPassword": "¿Olvidaste tu contraseña?",
+    "dontHaveAccount": "¿No tienes cuenta?",
+    "alreadyHaveAccount": "¿Ya tienes cuenta?",
     "acceptPrivacyTerms": "I accept the <privacyPolicy>Privacy Policy</privacyPolicy> and <termsOfService>Terms of Service</termsOfService>",
     "privacyPolicy": "Privacy Policy",
     "termsOfService": "Terms of Service",
-    "checkYourEmail": "Check your email",
+    "checkYourEmail": "Revisa tu email",
     "confirmationLinkSent": "We sent a reset link to",
     "clickLinkToActivate": "Click the link in the email to activate your account. If you don't see the email, check your spam folder.",
     "returnToHome": "Return to home",
-    "backToSignIn": "Back to sign in",
-    "resetPassword": "Reset password",
-    "resetPasswordDescription": "Enter your email and we'll send you a reset link",
-    "sendResetLink": "Send link",
+    "backToSignIn": "Volver al login",
+    "resetPassword": "Restablecer contraseña",
+    "resetPasswordDescription": "Ingresa tu email y te enviaremos un link para restablecer tu contraseña",
+    "sendResetLink": "Enviar link",
     "cancel": "Cancel",
     "pleaseEnterValidEmail": "Please enter a valid email address",
-    "signInFailed": "Sign in failed. Check your credentials.",
-    "signUpFailed": "Sign up failed. Please try again."
+    "signInFailed": "Error al iniciar sesión. Verifica tus datos.",
+    "signUpFailed": "Error al registrarse. Intenta de nuevo."
   },
   "onboarding": {
     "welcome": "Welcome",
-    "next": "Next",
-    "skip": "Skip"
+    "next": "Siguiente",
+    "skip": "Saltar"
   },
   "tools": {
     "executeCommand": "Executing Command",
@@ -582,12 +582,7 @@
   "languages": {
     "en": "English",
     "de": "Deutsch",
-    "it": "Italiano",
-    "zh": "中文",
-    "ja": "日本語",
-    "pt": "Português",
-    "fr": "Français",
-    "es": "Español"
+    "it": "Italiano"
   },
   "suna": {
     "samplePrompts": "Sample prompts",
@@ -838,4 +833,3 @@
     }
   }
 }
-
