--- a/frontend/translations/it.json
+++ b/frontend/translations/it.json
@@ -12,7 +12,7 @@
     "delete": "Elimina",
     "edit": "Modifica",
     "search": "Cerca",
-    "loading": "Caricamento in corso...",
+    "loading": "Caricamento...",
     "error": "Errore",
     "retry": "Riprova",
     "send": "Invia",
@@ -22,7 +22,7 @@
     "update": "Aggiorna",
     "remove": "Rimuovi",
     "confirm": "Conferma",
-    "processing": "Elaborazione in corso...",
+    "processing": "Elaborazione...",
     "keep": "Mantieni",
     "active": "Attivo",
     "inactive": "Inattivo",
@@ -59,33 +59,33 @@
         "select": "Seleziona lingua"
       },
       "deleteAccount": {
-        "title": "Elimina account",
+        "title": "Elimina Account",
         "description": "Rimuovi permanentemente il tuo account e tutti i dati associati",
         "button": "Elimina account",
-        "scheduled": "Eliminazione programmata",
+        "scheduled": "Eliminazione Programmata",
         "scheduledDescription": "Il tuo account sarà eliminato permanentemente il {date}.",
         "canCancel": "Puoi annullare questa richiesta in qualsiasi momento prima della data di eliminazione.",
-        "cancelButton": "Annulla richiesta di eliminazione",
-        "dialogTitle": "Elimina account",
-        "warning": "Questa azione non può essere annullata dopo 30 giorni",
+        "cancelButton": "Annulla Eliminazione",
+        "dialogTitle": "Elimina Account",
+        "warning": "Questa azione non può essere annullata",
         "whenDelete": "Quando elimini il tuo account:",
-        "agentsDeleted": "Tutti i tuoi agenti e le versioni degli agenti saranno eliminati",
-        "threadsDeleted": "Tutti i tuoi thread e le conversazioni saranno eliminati",
-        "credentialsRemoved": "Tutte le tue credenziali e integrazioni saranno rimosse",
-        "subscriptionCancelled": "Il tuo abbonamento sarà annullato",
+        "agentsDeleted": "Tutti i tuoi agenti e versioni degli agenti",
+        "threadsDeleted": "Tutti i tuoi thread e conversazioni",
+        "credentialsRemoved": "Tutte le tue credenziali e integrazioni",
+        "subscriptionCancelled": "I tuoi dati di abbonamento e fatturazione",
         "billingRemoved": "Tutti i dati di fatturazione saranno rimossi",
         "scheduled30Days": "Il tuo account sarà programmato per l'eliminazione tra 30 giorni",
-        "gracePeriod": "Puoi annullare questa richiesta in qualsiasi momento entro il periodo di grazia di 30 giorni. Dopo 30 giorni, tutti i tuoi dati saranno eliminati permanentemente e non potranno essere recuperati.",
-        "confirmText": "Digita delete per confermare",
-        "confirmPlaceholder": "delete",
+        "gracePeriod": "Il tuo account sarà programmato per l'eliminazione tra 30 giorni. Puoi annullare questa richiesta in qualsiasi momento durante il periodo di grazia.",
+        "confirmText": "Digita {text} per confermare",
+        "confirmPlaceholder": "ELIMINA",
         "keepAccount": "Mantieni account",
-        "cancelDeletionTitle": "Annulla eliminazione account",
-        "cancelDeletionDescription": "Sei sicuro di voler annullare l'eliminazione del tuo account? Il tuo account e tutti i dati saranno preservati.",
-        "cancelDeletion": "Annulla eliminazione"
+        "cancelDeletionTitle": "Annulla Eliminazione Account",
+        "cancelDeletionDescription": "Vuoi annullare l'eliminazione del tuo account? Il tuo account e tutti i dati saranno preservati.",
+        "cancelDeletion": "Annulla Eliminazione"
       }
     },
     "billing": {
-      "title": "Stato fatturazione",
+      "title": "Fatturazione & Abbonamento",
       "description": "Gestisci i tuoi crediti e abbonamento",
       "totalCredits": "Crediti totali disponibili",
       "allCredits": "Tutti i crediti",
@@ -219,8 +219,8 @@
     "knowledgeBase": "Base di conoscenza",
     "conversation": "conversazione",
     "conversations": "conversazioni",
-    "noConversations": "Ancora nessuna conversazione",
-    "startNewChat": "Inizia una nuova chat",
+    "noConversations": "Ancora nessun chat",
+    "startNewChat": "Inizia un nuovo chat",
     "openInNewTab": "Apri in nuova scheda",
     "delete": "Elimina",
     "deleting": "Eliminazione",
@@ -244,7 +244,7 @@
     "customWorkers": "Worker personalizzati",
     "scheduledTriggers": "Trigger pianificati",
     "appTriggers": "Trigger app",
-    "limitsExceeded": "Hai esaurito i limiti. Aggiorna il tuo piano per chattare di più.",
+    "limitsExceeded": "Hai finito i limiti. Migliora ora.",
     "agentInitiatedSuccessfully": "Agente avviato con successo",
     "aiAssistantReady": "Il tuo assistente AI è pronto ad aiutare"
   },
@@ -293,6 +293,8 @@
     "customizeIcon": "Clicca per personalizzare l'icona dell'agente"
   },
   "home": {
+    "title": "Benvenuto",
+    "subtitle": "Inizia",
     "heroPlaceholder": "Descrivi il compito che vuoi che il tuo Worker completi..."
   },
   "threads": {
@@ -302,11 +304,26 @@
     "placeholder": "Digita il tuo messaggio..."
   },
   "billing": {
-    "title": "Fatturazione",
+    "title": "Fatturazione & Abbonamento",
     "subscription": "Abbonamento",
     "credits": "Crediti",
     "popular": "Popolare",
     "creditsExplained": "Crediti spiegati",
+    "trialActive": "Prova attiva",
+    "trialBadge": "Prova di 7 giorni",
+    "currentPlan": "Piano Attuale",
+    "currentBadge": "Corrente",
+    "scheduled": "Programmato",
+    "scheduledBadge": "Programmato",
+    "loading": "Caricamento...",
+    "subscriptionChangeScheduled": "Modifica abbonamento programmata",
+    "planWillChangeOn": "Il tuo piano cambierà il {date}.",
+    "failedToInitiateSubscription": "Impossibile avviare l'abbonamento. Riprova.",
+    "subscriptionUpgraded": "Abbonamento aggiornato da {currentPrice} a {newPrice}",
+    "subscriptionUpdated": "Abbonamento aggiornato con successo",
+    "cannotDowngradeDuringCommitment": "Impossibile passare a un piano inferiore durante il periodo di impegno",
+    "alreadyOnThisPlan": "Sei già su questo Piano.",
+    "localModeMessage": "Esecuzione in modalità sviluppo locale - le funzionalità di fatturazione sono disabilitate",
     "creditsExplainedPage": {
       "title": "Crediti spiegati",
       "subtitle": "Tutto ciò che devi sapere su come funzionano i crediti su Kortix",
@@ -410,7 +427,7 @@
   },
   "auth": {
     "logIntoAccount": "Accedi al tuo account",
-    "createAccount": "Crea il tuo account",
+    "createAccount": "Crea account",
     "continueWithGoogle": "Continua con Google",
     "continueWithGitHub": "Continua con GitHub",
     "orEmail": "o email",
@@ -422,23 +439,23 @@
     "signingIn": "Accesso in corso...",
     "creatingAccount": "Creazione account in corso...",
     "forgotPassword": "Password dimenticata?",
-    "dontHaveAccount": "Non hai un account? Registrati",
-    "alreadyHaveAccount": "Hai già un account? Accedi",
+    "dontHaveAccount": "Non hai un account?",
+    "alreadyHaveAccount": "Hai già un account?",
     "acceptPrivacyTerms": "Accetto l'<privacyPolicy>Informativa sulla Privacy</privacyPolicy> e i <termsOfService>Termini di Servizio</termsOfService>",
     "privacyPolicy": "Informativa sulla Privacy",
     "termsOfService": "Termini di Servizio",
     "checkYourEmail": "Controlla la tua email",
-    "confirmationLinkSent": "Abbiamo inviato un link di conferma a:",
+    "confirmationLinkSent": "Ti abbiamo inviato un link a",
     "clickLinkToActivate": "Clicca sul link nell'email per attivare il tuo account. Se non vedi l'email, controlla la cartella spam.",
     "returnToHome": "Torna alla home",
-    "backToSignIn": "Torna all'accesso",
-    "resetPassword": "Reimposta Password",
-    "resetPasswordDescription": "Inserisci il tuo indirizzo email e ti invieremo un link per reimpostare la password.",
-    "sendResetLink": "Invia Link di Reimpostazione",
+    "backToSignIn": "Torna al login",
+    "resetPassword": "Reimposta password",
+    "resetPasswordDescription": "Inserisci la tua email e ti invieremo un link per reimpostare la password",
+    "sendResetLink": "Invia link",
     "cancel": "Annulla",
     "pleaseEnterValidEmail": "Inserisci un indirizzo email valido",
-    "signInFailed": "Accesso fallito",
-    "signUpFailed": "Registrazione fallita"
+    "signInFailed": "Accesso fallito. Controlla le tue credenziali.",
+    "signUpFailed": "Registrazione fallita. Riprova."
   },
   "onboarding": {
     "welcome": "Benvenuto",
@@ -564,10 +581,6 @@
     "network": "Errore di rete",
     "unauthorized": "Non autorizzato",
     "notFound": "Non trovato"
-  },
-  "home": {
-    "title": "Benvenuto",
-    "subtitle": "Inizia"
   },
   "languages": {
     "en": "English",
