--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -1,24 +1,24 @@
 {
   "common": {
-    "cancel": "Cancel",
-    "save": "Save",
+    "cancel": "Cancelar",
+    "save": "Salvar",
     "saving": "Saving...",
     "success": "Success",
-    "done": "Done",
-    "close": "Close",
+    "done": "Pronto",
+    "close": "Fechar",
     "ok": "OK",
-    "yes": "Yes",
-    "no": "No",
-    "delete": "Delete",
-    "edit": "Edit",
-    "search": "Search",
-    "loading": "Loading...",
-    "error": "Error",
-    "retry": "Try again",
-    "send": "Send",
-    "back": "Back",
-    "new": "New",
-    "create": "Create",
+    "yes": "Sim",
+    "no": "Não",
+    "delete": "Excluir",
+    "edit": "Editar",
+    "search": "Buscar",
+    "loading": "Carregando...",
+    "error": "Erro",
+    "retry": "Tentar de novo",
+    "send": "Enviar",
+    "back": "Voltar",
+    "new": "Novo",
+    "create": "Criar",
     "update": "Update",
     "remove": "Remove",
     "confirm": "Confirm",
@@ -32,7 +32,7 @@
     "tryFree": "Start free"
   },
   "settings": {
-    "title": "Settings",
+    "title": "Configurações",
     "tabs": {
       "general": "General",
       "plan": "Plan",
@@ -301,14 +301,14 @@
     "placeholder": "Type your message..."
   },
   "billing": {
-    "title": "Billing & Subscription",
+    "title": "Faturação & Assinatura",
     "subscription": "Subscription",
-    "credits": "Credits",
+    "credits": "Créditos",
     "popular": "Popular",
     "creditsExplained": "Credits explained",
     "trialActive": "Trial Active",
     "trialBadge": "7-Day Trial",
-    "currentPlan": "Current Plan",
+    "currentPlan": "Plano Atual",
     "currentBadge": "Current",
     "scheduled": "Scheduled",
     "scheduledBadge": "Scheduled",
@@ -386,19 +386,19 @@
     "threadUsage": "Thread Usage",
     "error": "Error",
     "totalUsage": "Total Usage",
-    "usage": "Usage",
+    "usage": "Uso",
     "thread": "Thread",
     "lastUsed": "Last Used",
     "creditsUsed": "Credits Used",
     "creditTransactions": "Credit Transactions",
     "loadingTransactionHistory": "Loading your transaction history...",
-    "monthly": "Monthly",
+    "monthly": "Mensal",
     "yearly": "Yearly",
     "discount": "15% off",
-    "perMonth": "/month",
-    "billedYearly": "billed yearly",
+    "perMonth": "/mês",
+    "billedYearly": "faturado anualmente",
     "downgradePending": "Downgrade Pending",
-    "downgrade": "Downgrade",
+    "downgrade": "Rebaixar",
     "switchToLegacyYearly": "Switch to Legacy Yearly",
     "pickPlan": "Pick the plan that works for you.",
     "reachedLimit": "You've reached your limits.",
@@ -407,7 +407,7 @@
     "workerLimit": "Worker Limit ({current}/{limit})",
     "triggerLimit": "Trigger Limit ({current}/{limit})",
     "getAdditionalCredits": "Get Additional Credits",
-    "selectPlan": "Select Plan",
+    "selectPlan": "Selecionar Plano",
     "changeScheduled": "Change Scheduled",
     "notAvailable": "Not Available",
     "features": {
@@ -425,39 +425,39 @@
   "auth": {
     "logIntoAccount": "Log into your account",
     "createAccount": "Create account",
-    "continueWithGoogle": "Continue with Google",
+    "continueWithGoogle": "Continuar com Google",
     "continueWithGitHub": "Continue with GitHub",
-    "orEmail": "or email",
-    "emailAddress": "Email address",
-    "password": "Password",
+    "orEmail": "ou email",
+    "emailAddress": "Endereço de email",
+    "password": "Senha",
     "confirmPassword": "Confirm your password",
-    "signIn": "Sign in",
-    "signUp": "Sign up",
-    "signingIn": "Signing in...",
+    "signIn": "Entrar",
+    "signUp": "Cadastrar",
+    "signingIn": "Entrando...",
     "creatingAccount": "Creating account...",
-    "forgotPassword": "Forgot password?",
-    "dontHaveAccount": "Don't have an account?",
-    "alreadyHaveAccount": "Already have an account?",
+    "forgotPassword": "Esqueceu a senha?",
+    "dontHaveAccount": "Não tem conta?",
+    "alreadyHaveAccount": "Já tem conta?",
     "acceptPrivacyTerms": "I accept the <privacyPolicy>Privacy Policy</privacyPolicy> and <termsOfService>Terms of Service</termsOfService>",
     "privacyPolicy": "Privacy Policy",
     "termsOfService": "Terms of Service",
-    "checkYourEmail": "Check your email",
+    "checkYourEmail": "Confere teu email",
     "confirmationLinkSent": "We sent a reset link to",
     "clickLinkToActivate": "Click the link in the email to activate your account. If you don't see the email, check your spam folder.",
     "returnToHome": "Return to home",
-    "backToSignIn": "Back to sign in",
-    "resetPassword": "Reset password",
-    "resetPasswordDescription": "Enter your email and we'll send you a reset link",
-    "sendResetLink": "Send link",
+    "backToSignIn": "Voltar ao login",
+    "resetPassword": "Redefinir senha",
+    "resetPasswordDescription": "Digite seu email e vamos te enviar um link para redefinir",
+    "sendResetLink": "Enviar link",
     "cancel": "Cancel",
     "pleaseEnterValidEmail": "Please enter a valid email address",
-    "signInFailed": "Sign in failed. Check your credentials.",
+    "signInFailed": "Falha ao entrar. Confere teus dados.",
     "signUpFailed": "Sign up failed. Please try again."
   },
   "onboarding": {
     "welcome": "Welcome",
-    "next": "Next",
-    "skip": "Skip"
+    "next": "Próximo",
+    "skip": "Pular"
   },
   "tools": {
     "executeCommand": "Executing Command",
@@ -582,12 +582,7 @@
   "languages": {
     "en": "English",
     "de": "Deutsch",
-    "it": "Italiano",
-    "zh": "中文",
-    "ja": "日本語",
-    "pt": "Português",
-    "fr": "Français",
-    "es": "Español"
+    "it": "Italiano"
   },
   "suna": {
     "samplePrompts": "Sample prompts",
@@ -838,4 +833,3 @@
     }
   }
 }
-
