--- a/frontend/translations/zh.json
+++ b/frontend/translations/zh.json
@@ -1,24 +1,24 @@
 {
   "common": {
-    "cancel": "Cancel",
-    "save": "Save",
+    "cancel": "取消",
+    "save": "保存",
     "saving": "Saving...",
     "success": "Success",
-    "done": "Done",
-    "close": "Close",
-    "ok": "OK",
-    "yes": "Yes",
-    "no": "No",
-    "delete": "Delete",
-    "edit": "Edit",
-    "search": "Search",
-    "loading": "Loading...",
-    "error": "Error",
-    "retry": "Try again",
-    "send": "Send",
-    "back": "Back",
-    "new": "New",
-    "create": "Create",
+    "done": "完成",
+    "close": "关闭",
+    "ok": "好的",
+    "yes": "是",
+    "no": "否",
+    "delete": "删除",
+    "edit": "编辑",
+    "search": "搜索",
+    "loading": "加载中...",
+    "error": "出错了",
+    "retry": "重试",
+    "send": "发送",
+    "back": "返回",
+    "new": "新建",
+    "create": "创建",
     "update": "Update",
     "remove": "Remove",
     "confirm": "Confirm",
@@ -32,7 +32,7 @@
     "tryFree": "Start free"
   },
   "settings": {
-    "title": "Settings",
+    "title": "设置",
     "tabs": {
       "general": "General",
       "plan": "Plan",
@@ -301,14 +301,14 @@
     "placeholder": "Type your message..."
   },
   "billing": {
-    "title": "Billing & Subscription",
+    "title": "计费与订阅",
     "subscription": "Subscription",
-    "credits": "Credits",
+    "credits": "积分",
     "popular": "Popular",
     "creditsExplained": "Credits explained",
     "trialActive": "Trial Active",
     "trialBadge": "7-Day Trial",
-    "currentPlan": "Current Plan",
+    "currentPlan": "当前套餐",
     "currentBadge": "Current",
     "scheduled": "Scheduled",
     "scheduledBadge": "Scheduled",
@@ -386,19 +386,19 @@
     "threadUsage": "Thread Usage",
     "error": "Error",
     "totalUsage": "Total Usage",
-    "usage": "Usage",
+    "usage": "使用情况",
     "thread": "Thread",
     "lastUsed": "Last Used",
     "creditsUsed": "Credits Used",
     "creditTransactions": "Credit Transactions",
     "loadingTransactionHistory": "Loading your transaction history...",
-    "monthly": "Monthly",
+    "monthly": "月付",
     "yearly": "Yearly",
     "discount": "15% off",
-    "perMonth": "/month",
-    "billedYearly": "billed yearly",
+    "perMonth": "/月",
+    "billedYearly": "按年计费",
     "downgradePending": "Downgrade Pending",
-    "downgrade": "Downgrade",
+    "downgrade": "降级",
     "switchToLegacyYearly": "Switch to Legacy Yearly",
     "pickPlan": "Pick the plan that works for you.",
     "reachedLimit": "You've reached your limits.",
@@ -407,7 +407,7 @@
     "workerLimit": "Worker Limit ({current}/{limit})",
     "triggerLimit": "Trigger Limit ({current}/{limit})",
     "getAdditionalCredits": "Get Additional Credits",
-    "selectPlan": "Select Plan",
+    "selectPlan": "选择套餐",
     "changeScheduled": "Change Scheduled",
     "notAvailable": "Not Available",
     "features": {
@@ -424,40 +424,40 @@
   },
   "auth": {
     "logIntoAccount": "Log into your account",
-    "createAccount": "Create account",
-    "continueWithGoogle": "Continue with Google",
+    "createAccount": "创建账号",
+    "continueWithGoogle": "使用 Google 继续",
     "continueWithGitHub": "Continue with GitHub",
-    "orEmail": "or email",
-    "emailAddress": "Email address",
-    "password": "Password",
-    "confirmPassword": "Confirm your password",
-    "signIn": "Sign in",
-    "signUp": "Sign up",
-    "signingIn": "Signing in...",
+    "orEmail": "或邮箱",
+    "emailAddress": "邮箱地址",
+    "password": "密码",
+    "confirmPassword": "确认密码",
+    "signIn": "登录",
+    "signUp": "注册",
+    "signingIn": "登录中...",
     "creatingAccount": "Creating account...",
-    "forgotPassword": "Forgot password?",
-    "dontHaveAccount": "Don't have an account?",
-    "alreadyHaveAccount": "Already have an account?",
+    "forgotPassword": "忘记密码？",
+    "dontHaveAccount": "还没账号？",
+    "alreadyHaveAccount": "已有账号？",
     "acceptPrivacyTerms": "I accept the <privacyPolicy>Privacy Policy</privacyPolicy> and <termsOfService>Terms of Service</termsOfService>",
     "privacyPolicy": "Privacy Policy",
     "termsOfService": "Terms of Service",
-    "checkYourEmail": "Check your email",
+    "checkYourEmail": "查看邮箱",
     "confirmationLinkSent": "We sent a reset link to",
     "clickLinkToActivate": "Click the link in the email to activate your account. If you don't see the email, check your spam folder.",
     "returnToHome": "Return to home",
-    "backToSignIn": "Back to sign in",
-    "resetPassword": "Reset password",
-    "resetPasswordDescription": "Enter your email and we'll send you a reset link",
-    "sendResetLink": "Send link",
+    "backToSignIn": "返回登录",
+    "resetPassword": "重置密码",
+    "resetPasswordDescription": "输入你的邮箱，我们会发送重置链接给你",
+    "sendResetLink": "发送链接",
     "cancel": "Cancel",
     "pleaseEnterValidEmail": "Please enter a valid email address",
-    "signInFailed": "Sign in failed. Check your credentials.",
-    "signUpFailed": "Sign up failed. Please try again."
+    "signInFailed": "登录失败，请检查你的账号信息",
+    "signUpFailed": "注册失败，请重试"
   },
   "onboarding": {
     "welcome": "Welcome",
-    "next": "Next",
-    "skip": "Skip"
+    "next": "下一步",
+    "skip": "跳过"
   },
   "tools": {
     "executeCommand": "Executing Command",
@@ -582,12 +582,7 @@
   "languages": {
     "en": "English",
     "de": "Deutsch",
-    "it": "Italiano",
-    "zh": "中文",
-    "ja": "日本語",
-    "pt": "Português",
-    "fr": "Français",
-    "es": "Español"
+    "it": "Italiano"
   },
   "suna": {
     "samplePrompts": "Sample prompts",
@@ -838,4 +833,3 @@
     }
   }
 }
-
