--- a/frontend/translations/fr.json
+++ b/frontend/translations/fr.json
@@ -1,24 +1,24 @@
 {
   "common": {
-    "cancel": "Cancel",
-    "save": "Save",
+    "cancel": "Annuler",
+    "save": "Enregistrer",
     "saving": "Saving...",
     "success": "Success",
-    "done": "Done",
-    "close": "Close",
+    "done": "OK",
+    "close": "Fermer",
     "ok": "OK",
-    "yes": "Yes",
-    "no": "No",
-    "delete": "Delete",
-    "edit": "Edit",
-    "search": "Search",
-    "loading": "Loading...",
-    "error": "Error",
-    "retry": "Try again",
-    "send": "Send",
-    "back": "Back",
-    "new": "New",
-    "create": "Create",
+    "yes": "Oui",
+    "no": "Non",
+    "delete": "Supprimer",
+    "edit": "Modifier",
+    "search": "Rechercher",
+    "loading": "Chargement...",
+    "error": "Erreur",
+    "retry": "Réessayer",
+    "send": "Envoyer",
+    "back": "Retour",
+    "new": "Nouveau",
+    "create": "Créer",
     "update": "Update",
     "remove": "Remove",
     "confirm": "Confirm",
@@ -32,7 +32,7 @@
     "tryFree": "Start free"
   },
   "settings": {
-    "title": "Settings",
+    "title": "Paramètres",
     "tabs": {
       "general": "General",
       "plan": "Plan",
@@ -301,14 +301,14 @@
     "placeholder": "Type your message..."
   },
   "billing": {
-    "title": "Billing & Subscription",
+    "title": "Facturation & Abonnement",
     "subscription": "Subscription",
-    "credits": "Credits",
+    "credits": "Crédits",
     "popular": "Popular",
     "creditsExplained": "Credits explained",
     "trialActive": "Trial Active",
     "trialBadge": "7-Day Trial",
-    "currentPlan": "Current Plan",
+    "currentPlan": "Plan Actuel",
     "currentBadge": "Current",
     "scheduled": "Scheduled",
     "scheduledBadge": "Scheduled",
@@ -386,19 +386,19 @@
     "threadUsage": "Thread Usage",
     "error": "Error",
     "totalUsage": "Total Usage",
-    "usage": "Usage",
+    "usage": "Utilisation",
     "thread": "Thread",
     "lastUsed": "Last Used",
     "creditsUsed": "Credits Used",
     "creditTransactions": "Credit Transactions",
     "loadingTransactionHistory": "Loading your transaction history...",
-    "monthly": "Monthly",
+    "monthly": "Mensuel",
     "yearly": "Yearly",
     "discount": "15% off",
-    "perMonth": "/month",
-    "billedYearly": "billed yearly",
+    "perMonth": "/mois",
+    "billedYearly": "facturé annuellement",
     "downgradePending": "Downgrade Pending",
-    "downgrade": "Downgrade",
+    "downgrade": "Rétrograder",
     "switchToLegacyYearly": "Switch to Legacy Yearly",
     "pickPlan": "Pick the plan that works for you.",
     "reachedLimit": "You've reached your limits.",
@@ -407,7 +407,7 @@
     "workerLimit": "Worker Limit ({current}/{limit})",
     "triggerLimit": "Trigger Limit ({current}/{limit})",
     "getAdditionalCredits": "Get Additional Credits",
-    "selectPlan": "Select Plan",
+    "selectPlan": "Sélectionner le Plan",
     "changeScheduled": "Change Scheduled",
     "notAvailable": "Not Available",
     "features": {
@@ -424,40 +424,40 @@
   },
   "auth": {
     "logIntoAccount": "Log into your account",
-    "createAccount": "Create account",
-    "continueWithGoogle": "Continue with Google",
+    "createAccount": "Créer un compte",
+    "continueWithGoogle": "Continuer avec Google",
     "continueWithGitHub": "Continue with GitHub",
-    "orEmail": "or email",
-    "emailAddress": "Email address",
-    "password": "Password",
-    "confirmPassword": "Confirm your password",
-    "signIn": "Sign in",
-    "signUp": "Sign up",
-    "signingIn": "Signing in...",
+    "orEmail": "ou email",
+    "emailAddress": "Adresse email",
+    "password": "Mot de passe",
+    "confirmPassword": "Confirmer le mot de passe",
+    "signIn": "Se connecter",
+    "signUp": "S'inscrire",
+    "signingIn": "Connexion...",
     "creatingAccount": "Creating account...",
-    "forgotPassword": "Forgot password?",
-    "dontHaveAccount": "Don't have an account?",
-    "alreadyHaveAccount": "Already have an account?",
+    "forgotPassword": "Mot de passe oublié?",
+    "dontHaveAccount": "Pas encore de compte?",
+    "alreadyHaveAccount": "Déjà un compte?",
     "acceptPrivacyTerms": "I accept the <privacyPolicy>Privacy Policy</privacyPolicy> and <termsOfService>Terms of Service</termsOfService>",
     "privacyPolicy": "Privacy Policy",
     "termsOfService": "Terms of Service",
-    "checkYourEmail": "Check your email",
+    "checkYourEmail": "Regarde tes emails",
     "confirmationLinkSent": "We sent a reset link to",
     "clickLinkToActivate": "Click the link in the email to activate your account. If you don't see the email, check your spam folder.",
     "returnToHome": "Return to home",
-    "backToSignIn": "Back to sign in",
-    "resetPassword": "Reset password",
-    "resetPasswordDescription": "Enter your email and we'll send you a reset link",
-    "sendResetLink": "Send link",
+    "backToSignIn": "Retour au login",
+    "resetPassword": "Réinitialiser",
+    "resetPasswordDescription": "Entre ton email et on t'enverra un lien de réinitialisation",
+    "sendResetLink": "Envoyer le lien",
     "cancel": "Cancel",
     "pleaseEnterValidEmail": "Please enter a valid email address",
-    "signInFailed": "Sign in failed. Check your credentials.",
-    "signUpFailed": "Sign up failed. Please try again."
+    "signInFailed": "Connexion échouée. Vérifie tes identifiants.",
+    "signUpFailed": "Inscription échouée. Réessaie."
   },
   "onboarding": {
     "welcome": "Welcome",
-    "next": "Next",
-    "skip": "Skip"
+    "next": "Suivant",
+    "skip": "Passer"
   },
   "tools": {
     "executeCommand": "Executing Command",
@@ -582,12 +582,7 @@
   "languages": {
     "en": "English",
     "de": "Deutsch",
-    "it": "Italiano",
-    "zh": "中文",
-    "ja": "日本語",
-    "pt": "Português",
-    "fr": "Français",
-    "es": "Español"
+    "it": "Italiano"
   },
   "suna": {
     "samplePrompts": "Sample prompts",
@@ -838,4 +833,3 @@
     }
   }
 }
-
