--- a/frontend/translations/ja.json
+++ b/frontend/translations/ja.json
@@ -1,24 +1,24 @@
 {
   "common": {
-    "cancel": "Cancel",
-    "save": "Save",
+    "cancel": "キャンセル",
+    "save": "保存",
     "saving": "Saving...",
     "success": "Success",
-    "done": "Done",
-    "close": "Close",
+    "done": "完了",
+    "close": "閉じる",
     "ok": "OK",
-    "yes": "Yes",
-    "no": "No",
-    "delete": "Delete",
-    "edit": "Edit",
-    "search": "Search",
-    "loading": "Loading...",
-    "error": "Error",
-    "retry": "Try again",
-    "send": "Send",
-    "back": "Back",
-    "new": "New",
-    "create": "Create",
+    "yes": "はい",
+    "no": "いいえ",
+    "delete": "削除",
+    "edit": "編集",
+    "search": "検索",
+    "loading": "読み込み中...",
+    "error": "エラー",
+    "retry": "もう一度",
+    "send": "送信",
+    "back": "戻る",
+    "new": "新規",
+    "create": "作成",
     "update": "Update",
     "remove": "Remove",
     "confirm": "Confirm",
@@ -32,7 +32,7 @@
     "tryFree": "Start free"
   },
   "settings": {
-    "title": "Settings",
+    "title": "設定",
     "tabs": {
       "general": "General",
       "plan": "Plan",
@@ -301,14 +301,14 @@
     "placeholder": "Type your message..."
   },
   "billing": {
-    "title": "Billing & Subscription",
+    "title": "請求とサブスクリプション",
     "subscription": "Subscription",
-    "credits": "Credits",
+    "credits": "クレジット",
     "popular": "Popular",
     "creditsExplained": "Credits explained",
     "trialActive": "Trial Active",
     "trialBadge": "7-Day Trial",
-    "currentPlan": "Current Plan",
+    "currentPlan": "現在のプラン",
     "currentBadge": "Current",
     "scheduled": "Scheduled",
     "scheduledBadge": "Scheduled",
@@ -386,19 +386,19 @@
     "threadUsage": "Thread Usage",
     "error": "Error",
     "totalUsage": "Total Usage",
-    "usage": "Usage",
+    "usage": "使用状況",
     "thread": "Thread",
     "lastUsed": "Last Used",
     "creditsUsed": "Credits Used",
     "creditTransactions": "Credit Transactions",
     "loadingTransactionHistory": "Loading your transaction history...",
-    "monthly": "Monthly",
+    "monthly": "月額",
     "yearly": "Yearly",
     "discount": "15% off",
-    "perMonth": "/month",
-    "billedYearly": "billed yearly",
+    "perMonth": "/月",
+    "billedYearly": "年額請求",
     "downgradePending": "Downgrade Pending",
-    "downgrade": "Downgrade",
+    "downgrade": "ダウングレード",
     "switchToLegacyYearly": "Switch to Legacy Yearly",
     "pickPlan": "Pick the plan that works for you.",
     "reachedLimit": "You've reached your limits.",
@@ -407,7 +407,7 @@
     "workerLimit": "Worker Limit ({current}/{limit})",
     "triggerLimit": "Trigger Limit ({current}/{limit})",
     "getAdditionalCredits": "Get Additional Credits",
-    "selectPlan": "Select Plan",
+    "selectPlan": "プランを選択",
     "changeScheduled": "Change Scheduled",
     "notAvailable": "Not Available",
     "features": {
@@ -425,39 +425,39 @@
   "auth": {
     "logIntoAccount": "Log into your account",
     "createAccount": "Create account",
-    "continueWithGoogle": "Continue with Google",
+    "continueWithGoogle": "Googleで続ける",
     "continueWithGitHub": "Continue with GitHub",
-    "orEmail": "or email",
-    "emailAddress": "Email address",
-    "password": "Password",
+    "orEmail": "またはメール",
+    "emailAddress": "メールアドレス",
+    "password": "パスワード",
     "confirmPassword": "Confirm your password",
-    "signIn": "Sign in",
-    "signUp": "Sign up",
-    "signingIn": "Signing in...",
+    "signIn": "ログイン",
+    "signUp": "登録",
+    "signingIn": "ログイン中...",
     "creatingAccount": "Creating account...",
-    "forgotPassword": "Forgot password?",
-    "dontHaveAccount": "Don't have an account?",
-    "alreadyHaveAccount": "Already have an account?",
+    "forgotPassword": "パスワードを忘れた",
+    "dontHaveAccount": "アカウントない？",
+    "alreadyHaveAccount": "既にアカウントある？",
     "acceptPrivacyTerms": "I accept the <privacyPolicy>Privacy Policy</privacyPolicy> and <termsOfService>Terms of Service</termsOfService>",
     "privacyPolicy": "Privacy Policy",
     "termsOfService": "Terms of Service",
-    "checkYourEmail": "Check your email",
+    "checkYourEmail": "メールをチェック",
     "confirmationLinkSent": "We sent a reset link to",
     "clickLinkToActivate": "Click the link in the email to activate your account. If you don't see the email, check your spam folder.",
     "returnToHome": "Return to home",
-    "backToSignIn": "Back to sign in",
-    "resetPassword": "Reset password",
-    "resetPasswordDescription": "Enter your email and we'll send you a reset link",
-    "sendResetLink": "Send link",
+    "backToSignIn": "ログインに戻る",
+    "resetPassword": "パスワードリセット",
+    "resetPasswordDescription": "メールアドレスを入力すると、リセットリンクを送信します",
+    "sendResetLink": "リンクを送信",
     "cancel": "Cancel",
     "pleaseEnterValidEmail": "Please enter a valid email address",
-    "signInFailed": "Sign in failed. Check your credentials.",
+    "signInFailed": "ログイン失敗。認証情報を確認してください。",
     "signUpFailed": "Sign up failed. Please try again."
   },
   "onboarding": {
     "welcome": "Welcome",
-    "next": "Next",
-    "skip": "Skip"
+    "next": "次へ",
+    "skip": "スキップ"
   },
   "tools": {
     "executeCommand": "Executing Command",
@@ -582,12 +582,7 @@
   "languages": {
     "en": "English",
     "de": "Deutsch",
-    "it": "Italiano",
-    "zh": "中文",
-    "ja": "日本語",
-    "pt": "Português",
-    "fr": "Français",
-    "es": "Español"
+    "it": "Italiano"
   },
   "suna": {
     "samplePrompts": "Sample prompts",
@@ -838,4 +833,3 @@
     }
   }
 }
-
