--- a/frontend/translations/es.json
+++ b/frontend/translations/es.json
@@ -235,6 +235,10 @@
     "autonomousDescription": "Modo de trabajo profundo para resolución de problemas en varios pasos",
     "chat": "Chat",
     "chatDescription": "Conversación simple de ida y vuelta",
+    "sampleAnswers": "Respuestas de ejemplo",
+    "samplePrompts": "Prompts de ejemplo",
+    "waitingForUserResponse": "Kortix continuará trabajando de forma autónoma después de tu respuesta.",
+    "taskCompleted": "Tarea completada",
     "uploadingFiles": "Subiendo {count} archivo{plural}...",
     "uploadingFilesOne": "Subiendo {count} archivo...",
     "uploadingFilesMany": "Subiendo {count} archivos...",
