--- a/frontend/translations/it.json
+++ b/frontend/translations/it.json
@@ -264,6 +264,10 @@
     "autonomousDescription": "Modalità lavoro approfondito per risoluzione di problemi multi-step",
     "chat": "Chat",
     "chatDescription": "Semplice conversazione",
+    "sampleAnswers": "Risposte di esempio",
+    "samplePrompts": "Prompt di esempio",
+    "waitingForUserResponse": "Kortix continuerà a lavorare in modo autonomo dopo la tua risposta.",
+    "taskCompleted": "Attività completata",
     "uploadingFiles": "Caricamento di {count} file{plural}...",
     "uploadingFilesOne": "Caricamento di {count} file...",
     "uploadingFilesMany": "Caricamento di {count} file...",
