--- a/frontend/translations/ja.json
+++ b/frontend/translations/ja.json
@@ -235,6 +235,10 @@
     "autonomousDescription": "多段階の問題解決のための深い作業モード",
     "chat": "チャット",
     "chatDescription": "シンプルな往復会話",
+    "sampleAnswers": "サンプル回答",
+    "samplePrompts": "サンプルプロンプト",
+    "waitingForUserResponse": "あなたの回答後、Kortixは自律的に作業を続けます。",
+    "taskCompleted": "タスク完了",
     "uploadingFiles": "{count} 個のファイルをアップロード中...",
     "uploadingFilesOne": "{count} 個のファイルをアップロード中...",
     "uploadingFilesMany": "{count} 個のファイルをアップロード中...",
