--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -235,6 +235,10 @@
     "autonomousDescription": "Modo de trabalho profundo para resolução de problemas em várias etapas",
     "chat": "Chat",
     "chatDescription": "Conversa simples de ida e volta",
+    "sampleAnswers": "Respostas de exemplo",
+    "samplePrompts": "Prompts de exemplo",
+    "waitingForUserResponse": "Kortix continuará trabalhando de forma autônoma após tua resposta.",
+    "taskCompleted": "Tarefa concluída",
     "uploadingFiles": "Enviando {count} arquivo{plural}...",
     "uploadingFilesOne": "Enviando {count} arquivo...",
     "uploadingFilesMany": "Enviando {count} arquivos...",
