--- a/frontend/translations/zh.json
+++ b/frontend/translations/zh.json
@@ -235,6 +235,10 @@
     "autonomousDescription": "多步骤问题解决的深度工作模式",
     "chat": "聊天",
     "chatDescription": "简单的来回对话",
+    "sampleAnswers": "示例答案",
+    "samplePrompts": "示例提示",
+    "waitingForUserResponse": "您回答后，Kortix将继续自主工作。",
+    "taskCompleted": "任务已完成",
     "uploadingFiles": "正在上传 {count} 个文件...",
     "uploadingFilesOne": "正在上传 {count} 个文件...",
     "uploadingFilesMany": "正在上传 {count} 个文件...",
